Moved license.rtf into subdir to avoid Github picking it up as a document.

--- a/main.wxs
+++ b/main.wxs
@@ -28,7 +28,7 @@
 		</SetProperty>
 
 		<!-- License agreement text: dummy. Real text is set in WXS file -->
-		<WixVariable Id="WixUILicenseRtf" Value="LICENSE.rtf" />
+		<WixVariable Id="WixUILicenseRtf" Value="Resources\LICENSE.rtf" />
 		
 		<!-- Replace UI bitmaps -->
 		<WixVariable Id="WixUIBannerBmp" Value="Bitmaps\bannrbmp.bmp" />
